Security implementation with keycloak

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,12 @@ spring:
       connect-timeout: 2s
       timeout: 1s
 
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          jwk-set-uri: http://localhost:7080/realms/master/protocol/openid-connect/certs
+
 server:
   port: 9191
 
